--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -2,6 +2,6 @@
   <%= f.input :title, label: "Item" %>
   <%= f.input :description %>
   <%= f.label :tag_list, "Tags (separated by commas)" %></br>
-  <%= f.text_field :tag_list, value: f.object.tag_list.to_s %></br>
+  <%= f.text_field :tag_list, input_html: {value: f.object.tag_list.to_s} %></br>
   <%= f.button :submit %>
 <% end %>
