--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,5 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="page-header">
   <h1> Edit Checkist Items</h1>
-
-  <%= render 'form' %>
 </div>
+<%= render 'form' %>
