--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,26 +1,36 @@
 <% if user_signed_in?%>
 
 
-  <div class="col-md-6 col-md-offset-3">
+<div class="jumbotron">
+  <h1><font face="georgia">Items To Do</font></h1>
+</div>
   <% @items.each do |item| %>
 
   <% if item.completed? %>
     <div class="row item">
 
-      <div class="col-md-8">
-        <h2 style="opacity:0.5;"><strike><%= link_to item.title, item %></strike></h2>
+      <div class="col-md-9">
+        <h2 style="opacity:0.5;"><strike><%= item.title %></strike></h2>
         <p style="opacity:0.5;">Category: <%= item.description %></p>
-
+        <p style="opacity:0.5;">
+          Tags: <%= render item.tags %>
+        </p>
         <p style="opacity:0.5;">Completed <%=time_ago_in_words(item.completed_at) %> ago</p>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-md-1">
         <p><%= link_to complete_item_path(item), method: :patch do %></p>
           <i class="fa fa-lg fa-check"></i>
         <% end %>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-md-1">
+        <p><%= link_to edit_item_path(item) do %></p>
+          <i class="fa fa-lg fa-pencil-square-o" aria-hidden="true"></i>
+        <% end %>
+      </div>
+
+      <div class="col-md-1">
         <p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
           <i class="fa fa-lg fa-trash"></i>
         <% end %>
@@ -30,22 +40,28 @@
 
   <% else %>
     <div class="row item">
-        <div class="col-md-8">
-          <h2><%= link_to item.title, item %></h2>
+        <div class="col-md-9">
+          <h2><%=item.title %></h2>
           <p><%= item.description %></p>
           <p>
-            Tags: <%= item.tag_list %>
+            Tags: <%= render item.tags %>
           </p>
           <p>Created <%=time_ago_in_words(item.created_at) %> ago</p>
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-1">
           <p><%= link_to complete_item_path(item), method: :patch do %></p>
             <i class="fa fa-lg fa-check"></i>
           <% end %>
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-1">
+          <p><%= link_to edit_item_path(item) do %></p>
+            <i class="fa fa-lg fa-pencil-square-o" aria-hidden="true"></i>
+          <% end %>
+        </div>
+
+        <div class="col-md-1">
           <p><%= link_to item, method: :delete, data: {confirm: "Are you sure?"} do %></p>
             <i class="fa fa-lg fa-trash"></i>
           <% end %>
@@ -54,7 +70,13 @@
     </div>
   <% end %>
 <% end %>
-</div>
+  <% if @items.count == 0 %>
+    <div class="page-header">
+      <h1><font face="georgia">Get Started on Your Checklist</font></h1>
+      <p>Make a New Item.</p>
+      <%= link_to "New Item", new_item_path, class: "btn btn-primary" %>
+    </div>
+  <% end %>
 <% else %>
   <%= render 'layouts/static_landing_page' %>
 <% end %>
