--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
-<div class="col-md-6 col-md-offset-3">
-
+<div class="page-header">
   <h1>New Checklist Items</h1>
-
-  <%= render 'form' %>
 </div>
+
+
+<%= render 'form' %>
